--- a/src/index.css
+++ b/src/index.css
@@ -15,19 +15,47 @@ html,
 body,
 #root,
 #root > div,
-.interface {
+.interface,
+.menu {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
+.menu {
+  background: rgba(255, 255, 255, 0.9);
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.menu > button {
+  background: white;
+  color: black;
+  cursor: pointer;
+  pointer-events: auto;
+  font-size: min(min(6vw, 2.25rem), min(6vh, 2.25rem));
+  border: 2px solid black;
+  padding-block: 0.25em;
+  padding-inline: 0.5em;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.menu > button:hover {
+  background: black;
+  color: white;
+}
+
 .interface {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   pointer-events: none;
   font-family: "Bebas Neue", sans-serif;
 }
